--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -102,7 +102,7 @@
             <div class="col-twelve">
                 <a href="mailto:shubhamkumar.mca88@gmail.com" title="Hire Me" class="button stroke smoothscroll">Hire
                     Me</a>
-                <a href="{% static 'resume/resume.pdf' %}" title="Download CV" class="button button-primary">Download
+                <a href="{% static 'resume\shubhamresume.pdf' %}" title="Download CV" class="button button-primary">Download
                     CV</a>
             </div>
         </div>
