--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <strong>Email:</strong>
-                        <a href="mailto:shubhamkumar.mca88@gmail.com">shubhamkumar.mca88@gmail.com</a>
+                        <a href="mailto:shubhamkumar.mca@outlook.com">shubhamkumar.mca88@gmail.com</a>
                     </li>
 
                 </ul> <!-- /info-list -->
@@ -100,7 +100,7 @@
 
         <div class="row button-section">
             <div class="col-twelve">
-                <a href="mailto:shubhamkumar.mca88@gmail.com" title="Hire Me" class="button stroke smoothscroll">Hire
+                <a href="mailto:shubhamkumar.mca@outlook.com" title="Hire Me" class="button stroke smoothscroll">Hire
                     Me</a>
                 <a href="{% static 'resume\shubhamresume.pdf' %}" title="Download CV" class="button button-primary">Download
                     CV</a>
