--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -22,10 +22,10 @@
 
                     <img src="static\img\About.jpg" alt="Profile Picture">
 
-                    <p class="lead">Hy I'm shubham, as developer with a passion for crafting clean and efficient
-                        code. Proficient in frontend and backend technologies, with a focus on creating intuitive user
-                        experiences and scalable solutions. Dedicated to continuous learning and staying updated with
-                        the latest industry trends. Ready to contribute to dynamic teams and drive impactful projects.
+                    <p class="lead">Hy I'm shubham, as developer with a frontend and backend technologies, with a focus
+                        on creating intuitive user experiences and scalable solutions. Dedicated to continuous learning
+                        and staying updated with the latest industry trends. Ready to contribute to dynamic teams and
+                        drive impactful projects.
                     </p>
                 </div>
 
