--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <strong>Email:</strong>
-                        <a href="mailto:shubhamkumar.mca@outlook.com">shubhamkumar.mca88@gmail.com</a>
+                        <a href="mailto:shubhamkumar.mca@outlook.com">shubhamkumar.mca@outlook.com</a>
                     </li>
 
                 </ul> <!-- /info-list -->
